
Rank * 10 Bonus for Passed Pawns

Score of midnight-dev vs midnight-latest: 417 - 340 - 243 [0.538]
...      midnight-dev playing White: 193 - 194 - 113  [0.499] 500
...      midnight-dev playing Black: 224 - 146 - 130  [0.578] 500
...      White vs Black: 339 - 418 - 243  [0.461] 1000
Elo difference: 26.8 +/- 18.8, LOS: 99.7 %, DrawRatio: 24.3 %
1000 of 1000 games finished.

Isolated Pawn Penalty
Score of midnight-dev vs midnight-latest: 1006 - 893 - 678  [0.522] 2577
...      midnight-dev playing White: 535 - 412 - 342  [0.548] 1289
...      midnight-dev playing Black: 471 - 481 - 336  [0.496] 1288
...      White vs Black: 1016 - 883 - 678  [0.526] 2577
Elo difference: 15.2 +/- 11.5, LOS: 99.5 %, DrawRatio: 26.3 %
SPRT: llr 2.97 (100.8%), lbound -2.94, ubound 2.94 - H1 was accepted

Bishop Bonus
Score of midnight-dev vs midnight-latest: 4697 - 4442 - 3307  [0.510] 12446
...      midnight-dev playing White: 2425 - 2160 - 1638  [0.521] 6223
...      midnight-dev playing Black: 2272 - 2282 - 1669  [0.499] 6223
...      White vs Black: 4707 - 4432 - 3307  [0.511] 12446
Elo difference: 7.1 +/- 5.2, LOS: 99.6 %, DrawRatio: 26.6 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

Tuned PSTs and Other penalties etc.
Score of midnight-dev vs midnight-pesto: 875 - 677 - 448 [0.549]
...      midnight-dev playing White: 453 - 322 - 225  [0.566] 1000
...      midnight-dev playing Black: 422 - 355 - 223  [0.533] 1000
...      White vs Black: 808 - 744 - 448  [0.516] 2000
Elo difference: 34.5 +/- 13.4, LOS: 100.0 %, DrawRatio: 22.4 %

Mobility Bonus
Score of midnight-dev vs midnight-latest: 399 - 308 - 234  [0.548] 941
...      midnight-dev playing White: 200 - 155 - 116  [0.548] 471
...      midnight-dev playing Black: 199 - 153 - 118  [0.549] 470
...      White vs Black: 353 - 354 - 234  [0.499] 941
Elo difference: 33.7 +/- 19.3, LOS: 100.0 %, DrawRatio: 24.9 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

