@@ -50,7 +50,7 @@ constexpr Score evaluate_passed_pawns(Position& board) {
 		const Rank rank = relative_rank<c>(rank_of(pawn));
 		passed_pawn_score += PASSED_PAWN_BONUS * rank;
 		const bool blocked = shift<relative_dir<c>(NORTH)>(SQUARE_BB[pawn]) & board.all_pieces<~c>();
-		passed_pawn_score += BLOCKED_PASSED_PAWN_BONUS * rank * blocked;
+		passed_pawn_score += BLOCKED_PASSED_PAWN_PENALTY * rank * blocked;
 	}
 	return passed_pawn_score;
 }
